refactor(webui): replace theme stylesheets with Pico data-theme
Remove light-theme.css and dark-theme.css in favor of Pico CSS's
native data-theme attribute. Theme rules are merged into style.css
using html[data-theme="light"] and html[data-theme="dark"] selectors.

Theme switching now toggles document.documentElement.dataset.theme
instead of swapping stylesheet hrefs. An inline script in <head>
sets the theme before paint to prevent FOUC.

--- a/crates/bergamot-server/webui/index.html
+++ b/crates/bergamot-server/webui/index.html
@@ -20,9 +20,16 @@
  *
  -->
 
-<html lang="en">
+<html lang="en" data-theme="light">
 <head>
 	<meta charset="utf-8">
+	<script>
+		(function() {
+			var saved = localStorage.getItem('Theme');
+			var systemDark = window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches;
+			document.documentElement.dataset.theme = saved ? saved : (systemDark ? 'dark' : 'light');
+		})();
+	</script>
 	<title>Bergamot</title>
 	<meta name="description" content="Bergamot web-interface">
 
@@ -61,7 +68,7 @@
 	<link rel="stylesheet" href="lib/pico.min.css" />
 	<link rel="stylesheet" href="bootstrap-compat.css" />
 	<link rel="stylesheet" href="style.css" />
-	<link id="ThemeStyleSheet" rel="stylesheet" href="light-theme.css">
+
 
 	<!-- fav and touch icons -->
 
